# malevich-space

./: .gitignore  README.md  mypy.ini  pyproject.toml
.github/workflows/: pre_release.yaml  pull_request.yaml  push.yaml  release.yaml
malevich_space/: constants.py
malevich_space/ci/: __init__.py  manager.py  report.py  status.py
malevich_space/cli/: cli.py
malevich_space/cli/commands/: __init__.py  asset.py  ci.py  component.py  env.py  schema.py  team.py
malevich_space/gql/: __init__.py  add_comp_in_flow.py  cfg.py  create_sa.py  org.py  set_in_flow_component_cfg.py
malevich_space/gql/api_key/: __init__.py  get_api_key_by_name.py
malevich_space/gql/asset/: __init__.py  create.py  create_in_version.py  get.py
malevich_space/gql/cfg/: __init__.py
malevich_space/gql/collection/: __init__.py  ca_comp.py  ca_in_flow.py  collection_alias.py  update_ca.py
malevich_space/gql/component/: __init__.py  add_comp_in_flow.py  add_comp_to_org.py  add_op_to_av.py  add_tag.py  app_comp.py  component.py  flow_by_version_id.py  get_comp_by_reverse_id.py  invoke.py  (+5 more)
malevich_space/ops/: __init__.py  component_manager.py  env.py  roller.py  slow_component_manager.py  space.py
malevich_space/parser/: __init__.py  abs.py  yaml.py
malevich_space/schema/: __init__.py  asset.py  branch.py  collection_alias.py  component.py  dep.py  flow.py  host.py  op.py  org.py  payload.py  result.py  run_app_status.py  schema.py  setup.py  stand.py  task.py  version.py  version_mode.py
space/: constants.py
space/ci/: manager.py  platform.py
space/cli/: cli.py
space/gql/: __init__.py  add_app_to_comp_flow.py  add_ca_to_comp_flow.py  add_cfg_2_av_app.py  add_dep_2_op.py  app_comp.py  attach_tag_to_comp.py  branch.py  collection_alias.py  create_op.py  create_schema_alias.py  flow_comp.py  get_branch_by_name.py  get_comp_by_reverse_id.py  get_schema.py  in_flow_cfg_upd.py  link.py  run.py  select_op_in_flow.py
space/ops/: __init__.py  component_manager.py  env.py  roller.py  space.py
space/parser/: __init__.py  abs.py  yaml.py
space/schema/: __init__.py  cfg.py  component.py  flow.py  sa.py  task.py
tests/: utility.py
(+58 files in other folders)
