[tool.poetry]
name = "space"
version = "0.1.1"
description = ""
authors = ["Zak Davydov <zak@onjulius.co>"]

[tool.poetry.dependencies]
python = "^3.11"
gql = "^3.4.0"
PyYAML = "^6.0"
typer = "^0.7.0"
rich = "^13.3.2"
twine = "^4.0.2"
websockets = "^11.0.3"
tqdm = "^4.66.1"
pydantic = "^2.3.0"
aiohttp = "^3.8.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
space = "space.cli.cli:main"
